--- a/css/absenzenformular.css
+++ b/css/absenzenformular.css
@@ -6,11 +6,6 @@
 
     width: 360px;
 
-
-    /* 
-    DO TO: Breite des Formulars via Mediaquery für Handys anpassen
-    */
-       
     display: flex;
     flex-direction: column;
 }
@@ -132,5 +127,20 @@
     box-shadow: 2px 5px 6px 2px rgba(24,24,24,0.4); 
 }
 
+/*  
+Breite des Formulars an Handys angepasst.
+Breite in Prozent angegeben, damit es besser an alle
+möglichen zukünftigen Bildschirme angepasst ist.
+*/
+@media(max-width:568px){
+    .absenzenformular{
+        width: 94%;
+        margin-left: 3%;
+        margin-right: 3%;
+        margin-bottom: 6%;
+    }
+}
 
-
+/* Horizontale ausrichtung für Handys ist nicht unterstützt und müsste genau hier
+mit einer Meidaquery (@media(...)) eingefügt werden. Da dies aber unverhältnismässig wenig
+genutzt werden würde, lasse ich bewusst die Unterstützung für dieses Bildschirmformat aus. */
