--- a/Schüler/css/absenzenformular.css
+++ b/Schüler/css/absenzenformular.css
@@ -58,7 +58,6 @@
     box-shadow: inset 0px 0px 3px 0px rgba(24, 24, 24, 0.767);
 }
 
-
 #plusbutton{
     height: 75px;
     width: 75px;
@@ -88,9 +87,25 @@
     width: auto;
 }
 
+/* Sorgt dafür, dass die zwei enthaltenen Labels nebeneinander sind */
+#begruendungLabel{
+    display: flex;
+}
+
+#characterlimit{
+    font-size: 15px;
+
+    position: relative;
+    top: 10px;
+
+    padding-left: 15px;
+}
+
 #begruendung{
-    height: 53px;
+    height: 90px;
+
     font-size: 25px;
+    font-family: Arial, Helvetica, sans-serif;
 
     background-color: rgb(140, 72, 218);
 
@@ -119,7 +134,7 @@
     background: rgb(98, 157, 247);
     border-width: 0;
     box-shadow: 1px 4px 5px 1px rgba(24,24,24,0.5);
-    transition: 0.7s;
+    transition: 0.5s;
 }
 
 #absenden:hover{
