--- a/css/main.css
+++ b/css/main.css
@@ -4,8 +4,6 @@ body{
 
     font-family: Arial, Helvetica, sans-serif;
     font-size: 25px;
-
-    overflow-x: hidden;
 }
 
 html {
@@ -18,6 +16,15 @@ header{
     overflow: hidden;
 
     height: 80px;
+}
+
+header #eingeloggt_als{
+    margin-top: 5px;
+    margin-right: 5px;
+
+    font-size: 16px;
+
+    float: right;
 }
 
 header a{
@@ -103,7 +110,6 @@ footer{
     height: 80px;
 
     display: flex;
-
 }
 
 footer div{
